--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ prospector = "^1.10.2"
 django-environ = "^0.11.2"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
+djoser = "^2.2.0"
 
 
 [build-system]
