--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-environ = "^0.11.2"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
 djoser = "^2.2.0"
+pytest-django = "^4.5.2"
 
 
 [build-system]
