--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
 djoser = "^2.2.0"
 pytest-django = "^4.5.2"
+redis = "^5.0.1"
+celery = "^5.3.4"
+django-celery-beat = "^2.5.0"
+flower = "^2.0.1"
+cowsay = "^6.1"
 
 
 [build-system]
